# gaia

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.hf  README.md
.claude/: settings.local.json
battlefield_env/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
battlefield_env/agents/: llm_agent.py  output_parser.py  prompts.py  rule_agent.py
battlefield_env/battlefield/: catalog.py  engine.py  environment.py  models.py  physics.py  rewards.py  scenarios.py  server.py
battlefield_env/client/: env_client.py
battlefield_env/scripts/: train_grpo.py
battlefield_env/tests/: test_physics.py
geoguess_env/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  train_grpo.py
geoguess_env/agents/: hf_client.py  llm_agent.py  output_parser.py  oversight_agent.py  prompts.py  rule_agent.py
geoguess_env/client/: env_client.py
geoguess_env/data/: training_1k.jsonl  world_cities_5k.jsonl
geoguess_env/geoguess/: __init__.py  engine.py  environment.py  locations.py  models.py  rewards.py  server.py  tools.py
geoguess_env/geoguess/scripts/: build_datasets.py
geoguess_env/geoguess/tool_providers/: __init__.py  building_style.py  language_detection.py  street_view.py  sun_angle.py  terrain.py  weather.py
geoguess_env/tests/: test_engine.py  test_geoguess_output_parser.py  test_openenv.py  test_scenarios.py
scripts/: start.sh
worldview/: .env.example  .gitignore  CLAUDE.md  index.html  package-lock.json  package.hf.json  package.json  vercel.json  vite.config.ts
worldview/api/: index.js
worldview/server/: .env.example  index.js
worldview/server/data/: sydneyRoads.js
worldview/src/: App.tsx  index.css  vite-env.d.ts
worldview/src/data/: airports.ts
worldview/src/hooks/: useAudio.ts  useBattlefield.ts  useCameras.ts  useEarthquakes.ts  useFlights.ts  useFlightsLive.ts  useGeoguess.ts  useGeolocation.ts  useIsMobile.ts  useSatellites.ts  useShips.ts  useTraffic.ts
worldview/src/lib/: audio.ts
worldview/src/shaders/: postprocess.ts
(+25 files in other folders)
